# bods-gql

./: .gitignore  README.md  pyproject.toml
examples/: bigquery_existing_data.sql  load_and_query.py  sample_queries.sql
src/bods_gql/: __init__.py  cli.py
src/bods_gql/converter/: bigquery_loader.py  mapper.py  reader.py
src/bods_gql/graph_schema/: property_graph.py
src/bods_gql/queries/: circular_ownership.py  corporate_groups.py  ubo_detection.py
src/bods_gql/utils/: bods_schema.py
tests/: conftest.py  test_bods_fixtures_conformance.py  test_cli_to_csv.py  test_mapper.py  test_optional_bigquery.py  test_property_graph.py  test_queries.py  test_reader.py
